--- a/_posts/2018-03-04-chronos.md
+++ b/_posts/2018-03-04-chronos.md
@@ -3,6 +3,8 @@ layout: post
 title: "chronos"
 ---
 
+<script src='[https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
+
 # chronos research note
 
 ##  1.概述
