--- a/_posts/2018-03-12-无监督学习.md
+++ b/_posts/2018-03-12-无监督学习.md
@@ -6,5 +6,13 @@ category: Machine learing
 
 #Unsupervised learning
 
-无监督学习是指给出一个数据集，没有给出任何标签，而让算法去学习其中的结构
+无监督学习是指给出一个数据集，没有给出任何标签，而让算法去学习数据集中的结构。
+
+无监督学习：
+
+聚类算法
+
+分类算法
+
+
 
