--- a/_posts/2018-03-18-python中的下划线.md
+++ b/_posts/2018-03-18-python中的下划线.md
@@ -18,17 +18,17 @@ __xxx 类中的私有变量名
 
 ​       因为下划线对解释器有特殊的意义，而且是内建标识符所使用的符号，我们建议程序员避免使用下划线作为变量名的开始。
 
-​        一般来讲，变量名\_xxx被看作是“私有的”，在模块或类外不可以使用。当变量是私有的时候，用_\_xxx来表示变量是很好的习惯。因为变量名\_\_xxx\_\_ 对Python来说有特殊含义,对于普通的变量应当避免这种命名风格。
+**1.在Python解释器中，下划线是输出上一次的结果**
 
-**“单下划线”开始的成员变量叫做保护变量，意思是只有类对象和子类对象自己能访问到这些变量。**
+**2.“单下划线”开始的成员变量叫做保护变量，意思是只有类对象和子类对象自己能访问到这些变量。并且不能用“from xxx import *”导入。**
 
-**“双下划线”开始的是私有成员，意思是只有类对象 自己能访问，连子类对象也不能访问到这个数据。**
+**3.“双下划线”开始的是私有成员，意思是只有类对象 自己能访问，连子类对象也不能访问到这个数据。**
 
-以单下划线开头（_foo）的代表不能直接访问的类属性，需通过类提供的接口进行访问，不能用“from xxx import *”而导入；以双下划线开头和结尾的（\_\_ foo\_\_）代表Python里的特殊方法专用的标识，如__init\_\_()代表类的构造函数。
+**4.以双下划线开头和结尾的（\_\_ foo\_\_）代表Python里的特殊方法专用的标识，如__init\_\_()代表类的构造函数。**
 
 
 
-**子类覆盖时，可以覆盖父类的任何方法，包括\__init__()方法。**
+
 
 
 
