--- a/_posts/2018-03-18-使用class定义类.md
+++ b/_posts/2018-03-18-使用class定义类.md
@@ -45,3 +45,5 @@ hunter = Person('Elmer Fudd')
 
 在类的定义中，\_\_init\_\_并不是必须的。只有当需要区分由该类创建的不同对象时，才需要指定 \__int__方法。
 
+**子类覆盖时，可以覆盖父类的任何方法，包括\__init__()方法。**
+
