--- a/_posts/2018-03-04-chronos.md
+++ b/_posts/2018-03-04-chronos.md
@@ -18,11 +18,11 @@ category: paper research note
 
 在某个频带上计算tof
 
-​                           $$h =ae^{-j 2\pi ft}$$\nbsp\nbsp\nbsp\nbsp\nbsp\nbsp\nbsp1-1
+​                           $$h =ae^{-j 2\pi ft}$$&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp1-1
 
-​                           $$\angle h= -2\pi f\tau mod2\pi ​$$\nbsp\nbsp\nbsp\nbsp\nbsp\nbsp1-2
+​                           $$\angle h= -2\pi f\tau mod2\pi $$$$&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp1-2
 
-​                           $$\tau = \frac{\angle h}{2\pi f} mod \frac{1}{f}$$\nbsp\nbsp\nbsp\nbsp\nbsp\nbsp\nbsp1-3
+​                           $$\tau = \frac{\angle h}{2\pi f} mod \frac{1}{f}$$$&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp1-3
 
 ​        其中$$\tau$$表示TOF。由公式1-3可以得知，tof算出来肯定是个周期值。这个值我们是没法用的。例如在2.41GHZ的频带上计算出的tof如下图所示：
 
